logs/cron_20260306.log
[2026-03-06 02:00:01] Starting cron job: /home/admin/.openclaw/workspace/scripts/memory_maintenance.sh
[2026-03-06 02:00:01] Current directory: /home/admin/.openclaw/workspace
[2026-03-06 02:00:01] Python path: /usr/bin/python3
[2026-03-06 02:00:01] Python version: Python 3.6.8
[2026-03-06 02:00:01] Environment variables set
[Fri Mar  6 02:00:01 AM CST 2026] Starting memory maintenance...
Updated memory index with 17 files
[master ebfd129] Memory maintenance - 2026-03-06
 9 files changed, 220 insertions(+), 3 deletions(-)
 create mode 100644 logs/ai_agent_daily_20260305.log
 create mode 100644 logs/cron_20260306.log
 create mode 100644 logs/shenzhen_intern_20260305.log
 create mode 100644 memory/2026-03-05-mc-project.md
 create mode 100644 memory/2026-03-05.md
 create mode 100644 messages/to_send/20260305_090002.json
error: src refspec main does not match any
error: failed to push some refs to 'https://github.com/GabrielOWO799/personal-assistant.git'
[Fri Mar  6 02:00:01 AM CST 2026] Memory maintenance completed!
[2026-03-06 02:00:01] Script completed with exit code: 0
[2026-03-06 02:00:01] Pending messages count: 10
[2026-03-06 02:00:01] WARNING: Found 10 pending messages that may need processing
[2026-03-06 02:00:01] SUCCESS: Cron job completed successfully
[2026-03-06 09:00:01] Starting cron job: /home/admin/.openclaw/workspace/scripts/ai_agent_daily.sh
[2026-03-06 09:00:01] Current directory: /home/admin/.openclaw/workspace
[2026-03-06 09:00:01] Starting cron job: /home/admin/.openclaw/workspace/scripts/ai_toy_weekly.sh
[2026-03-06 09:00:01] Python path: /usr/bin/python3
[2026-03-06 09:00:01] Current directory: /home/admin/.openclaw/workspace
[2026-03-06 09:00:01] Python version: Python 3.6.8
[2026-03-06 09:00:01] Environment variables set
[2026-03-06 09:00:01] Python path: /usr/bin/python3
[2026-03-06 09:00:01] Python version: Python 3.6.8
[2026-03-06 09:00:01] Environment variables set
正在生成AI+潮玩周报候选资讯（20条）...
搜索 kickstarter...
Traceback (most recent call last):
  File "scripts/searxng_search.py", line 5, in <module>
    import requests
  File "/home/admin/.local/lib/python3.8/site-packages/requests/__init__.py", line 43, in <module>
    import urllib3
  File "/home/admin/.local/lib/python3.8/site-packages/urllib3/__init__.py", line 5
    from __future__ import annotations
    ^
SyntaxError: future feature annotations is not defined
搜索 indiegogo...
Traceback (most recent call last):
  File "scripts/searxng_search.py", line 5, in <module>
    import requests
  File "/home/admin/.local/lib/python3.8/site-packages/requests/__init__.py", line 43, in <module>
    import urllib3
  File "/home/admin/.local/lib/python3.8/site-packages/urllib3/__init__.py", line 5
    from __future__ import annotations
    ^
SyntaxError: future feature annotations is not defined
搜索 theverge...
Traceback (most recent call last):
  File "scripts/searxng_search.py", line 5, in <module>
    import requests
  File "/home/admin/.local/lib/python3.8/site-packages/requests/__init__.py", line 43, in <module>
    import urllib3
  File "/home/admin/.local/lib/python3.8/site-packages/urllib3/__init__.py", line 5
    from __future__ import annotations
    ^
SyntaxError: future feature annotations is not defined
搜索 techcrunch...
Traceback (most recent call last):
  File "scripts/searxng_search.py", line 5, in <module>
    import requests
  File "/home/admin/.local/lib/python3.8/site-packages/requests/__init__.py", line 43, in <module>
    import urllib3
  File "/home/admin/.local/lib/python3.8/site-packages/urllib3/__init__.py", line 5
    from __future__ import annotations
    ^
SyntaxError: future feature annotations is not defined
搜索 toybook...
Traceback (most recent call last):
  File "scripts/searxng_search.py", line 5, in <module>
    import requests
  File "/home/admin/.local/lib/python3.8/site-packages/requests/__init__.py", line 43, in <module>
    import urllib3
  File "/home/admin/.local/lib/python3.8/site-packages/urllib3/__init__.py", line 5
    from __future__ import annotations
    ^
SyntaxError: future feature annotations is not defined
搜索 itjuzi...
Traceback (most recent call last):
  File "scripts/searxng_search.py", line 5, in <module>
    import requests
  File "/home/admin/.local/lib/python3.8/site-packages/requests/__init__.py", line 43, in <module>
    import urllib3
  File "/home/admin/.local/lib/python3.8/site-packages/urllib3/__init__.py", line 5
    from __future__ import annotations
    ^
SyntaxError: future feature annotations is not defined
搜索 36kr...
Traceback (most recent call last):
  File "scripts/searxng_search.py", line 5, in <module>
    import requests
  File "/home/admin/.local/lib/python3.8/site-packages/requests/__init__.py", line 43, in <module>
    import urllib3
  File "/home/admin/.local/lib/python3.8/site-packages/urllib3/__init__.py", line 5
    from __future__ import annotations
    ^
SyntaxError: future feature annotations is not defined
搜索 mojing...
Traceback (most recent call last):
  File "scripts/searxng_search.py", line 5, in <module>
    import requests
  File "/home/admin/.local/lib/python3.8/site-packages/requests/__init__.py", line 43, in <module>
    import urllib3
  File "/home/admin/.local/lib/python3.8/site-packages/urllib3/__init__.py", line 5
    from __future__ import annotations
    ^
SyntaxError: future feature annotations is not defined
AI+潮玩周报候选资讯（20条）已生成！
[2026-03-06 09:00:01] Script completed with exit code: 0
[2026-03-06 09:00:01] Pending messages count: 10
[2026-03-06 09:00:01] WARNING: Found 10 pending messages that may need processing
[2026-03-06 09:00:01] SUCCESS: Cron job completed successfully
[2026-03-06 09:00:01] Script completed with exit code: 0
[2026-03-06 09:00:01] Pending messages count: 10
[2026-03-06 09:00:01] WARNING: Found 10 pending messages that may need processing
[2026-03-06 09:00:01] SUCCESS: Cron job completed successfully
[2026-03-06 14:00:01] Starting cron job: /home/admin/.openclaw/workspace/scripts/shenzhen_intern.sh
[2026-03-06 14:00:01] Current directory: /home/admin/.openclaw/workspace
[2026-03-06 14:00:01] Python path: /usr/bin/python3
[2026-03-06 14:00:01] Python version: Python 3.6.8
[2026-03-06 14:00:01] Environment variables set
[2026-03-06 14:00:01] === 深圳AI Agent实习岗位链接推送开始 ===
[2026-03-06 14:00:01] === 深圳AI Agent实习岗位链接推送开始 ===
[2026-03-06 14:00:01] 搜索: 深圳 AI Agent 实习
[2026-03-06 14:00:02] 搜索: 深圳 智能体开发 实习
[2026-03-06 14:00:04] 搜索: 深圳 大模型应用 实习
[2026-03-06 14:00:06] 搜索: 深圳 LangChain 实习
[2026-03-06 14:00:07] 搜索: 深圳 AutoGen 实习
[2026-03-06 14:00:08] 搜索: 深圳 RAG 实习
[2026-03-06 14:00:10] 搜索: 深圳 Prompt Engineering 实习
[2026-03-06 14:00:11] 搜索: 深圳 LLM 应用 实习
[2026-03-06 14:00:13] 搜索: 深圳 人工智能 实习
[2026-03-06 14:00:14] 搜索: AI Agent intern 深圳
# 🤖 深圳AI Agent实习岗位日报 - 2026年03月06日

## 🔍 今日精选AI Agent相关实习岗位链接

> **专注领域**: AI Agent、智能体开发、大模型应用、Agent框架(LangChain/AutoGen/CrewAI)、RAG、Prompt Engineering


- [706 深圳 AI Meetup 1️⃣： OpenClaw Agent 深度体验 · Luma](https://luma.com/8ceajr5j)
- [AI手机的终极猜想：超级Agent入口-36氪](https://36kr.com/p/3647580674953092)
- [AI时代最好的教育_哔哩哔哩_bilibili](https://www.bilibili.com/video/BV19GP1z1E1z/)
- [Cheddar Bacon Mac and Cheese Recipe](https://www.allrecipes.com/recipe/217193/cheddar-bacon-mac-and-cheese/)
- [cognitive-services-quickstart-code/python/QnAMaker/sdk ... - GitHub](https://github.com/Azure-Samples/cognitive-services-quickstart-code/blob/master/python/QnAMaker/sdk/quickstart.py)
- [Create your Microsoft account](https://signup.live.com/)
- [Cruising locations : r/Sniffies - Reddit](https://www.reddit.com/r/Sniffies/comments/xrydua/cruising_locations/)
- [Hamme-Mille : Votre projet immobilier avec Immobilière L.A.](https://www.immobilierela.be/fr/nos-agences/hamme-mille/)
- [How does it work? : r/Sniffies - Reddit](https://www.reddit.com/r/Sniffies/comments/wkxka7/how_does_it_work/)

---
由太太自动推送于 Fri Mar  6 02:00:15 PM CST 2026
专注为你寻找最优质的AI Agent实习机会 💪
[2026-03-06 14:00:15] === 深圳AI Agent实习岗位链接推送完成 ===
[2026-03-06 14:00:15] === 深圳AI Agent实习岗位链接推送完成 ===
[2026-03-06 14:00:15] Script completed with exit code: 0
[2026-03-06 14:00:15] Pending messages count: 10
[2026-03-06 14:00:15] WARNING: Found 10 pending messages that may need processing
[2026-03-06 14:00:15] SUCCESS: Cron job completed successfully
